# void-ranger

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: tests.yml
backend/: .gcloudignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: physics.py  stars.py
backend/app/services/: catalog.py  physics.py
backend/data/: stars.json
backend/data/samples/deepfield/grid/: grid.json  grid.npy
backend/data/samples/deepfield/tiles/: manifest.json
backend/scripts/: process_galaxies.py  process_stars.py
backend/scripts/figures/: gen_plot_data.py
backend/scripts/glade/: README.md  build_grid.py  build_tiles.py  sample_glade.py
backend/scripts/glade/gcp/: .gitignore  00_setup.sh  10_load_bigquery.sh  20_build_assets.sh  30_serve.sh  99_teardown.sh  DEPLOY.md  Dockerfile  _lib.sh  config.env.example  cors.json
backend/tests/: test_build_grid_perf.py  test_deepfield.py  test_galaxies.py  test_physics.py  test_stars.py  test_tiles.py  test_web.py
docs/: GLOSSARY.md  README.md  cosmic-web.md  deep-field.md  efficiency-model.md  gravitational-field.md  light-latency.md  scaling-the-universe.md  void-finding.md
docs/plans/: 001-cosmic-web-option-c.md  002-cosmic-web-phase-2-glade-gcp.md  003-cosmic-web-phase-2-deep-field.md  004-single-service-cloudrun.md  005-educational-visuals.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  ModeToggle.jsx
frontend/src/hooks/: useSimulation.js
(+15 files in other folders)
