[project]
name = "void-ranger-backend"
version = "0.1.0"
description = "Void Ranger — relativistic computing education API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
